--- a/Index.html
+++ b/Index.html
@@ -10,18 +10,76 @@
 <body>
 
 <header>
-    <nav>
-        <div class="Logo">🏐🌍 Mundo Deportivo</div>
-
-        <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#deportes">Deportes</a></li>
-            <li><a href="#noticias">Noticias</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="#hollow-knight">Hollow Knight</a></li>
-        </ul>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">
+                <h1>🏐🌍 Mundo Deportivo 🌍🏐</h1>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#deportes">Deportes</a></li>
+                <li><a href="#noticias">Noticias</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#hollow-knight">Hollow Knight</a></li>
+            </ul>
+        </div>
     </nav>
 </header>
 
+<section class="hero" id="inicio">
+    <div class="hero-content">
+        <h2>🏁¡Deporte a todo porte!🏁</h2>
+        <p>🏋️‍♂️¡Nuestro sitio web ofrece una variedad de deportes para todos los deportistas!🏋️‍♀️</p>
+        <a href="#productos" class="btn-primary">¡AL RUEDO!</a>
+    </div>
+</section>
+
+<section id="menu" class="menu-section">
+    <h2>🏅 Deportes destacados 🏅</h2>
+    <h3>Explora tus deportes favoritos en nuestra galería virtual</h3>
+    <div class="menu-grid"></div>
+        <div class="categoria-card categoria-futbol">
+            <h1> ⚽ Fútbol</h1>
+            <h2><b>El rey de los deportes</b></h2>
+            <p>El deporte más popular del mundo con millones de aficionados. Sigue las ligas más importantes y los mejores jugadores.</p>
+            <h3><b>Ligas destacadas:</b> La Liga, Premier League, Serie A, Bundesliga</h3>
+        </div>
+
+        <div class="categoria-card categoria-baloncesto">
+            <h1> 🏀 Baloncesto</h1>
+            <h2><b>Emoción en cada canasta</b></h2>
+            <p> Acción trepidante y espectáculo garantizado. Desde la NBA hasta las competencias europeas.</p>
+            <h3><b>Competiciones:</b> NBA, Euroliga, FIBA</h3>
+        </div>
+
+        <div class="categoria-card categoria-tenis">
+            <h1> 🥎Tenis</h1>
+            <h2><b>Elegancia y Potencia</b></h2>
+            <p> Los mejores torneos y jugadores más destacados del circuito profesional mundial.</p>
+            <h3><b>Grand Slams:</b> Wimbledon, Roland Garros, US Open, Australian Open</h3>
+        </div>
+
+        <div class="categoria-card categoria-tenis">
+            <h1> 🏊Natación</h1>
+            <h2><b>Velocidad en el agua</b></h2>
+            <p> Compéticiones olímpicas y mundiales con los nadadores más rápidos del mundo.</p>
+            <h3><b>Estilos:</b> Libre, Espalda, Pecho, Mariposa</h3>
+        </div>
+
+        <div class="categoria-card categoria-tenis">
+            <h1> 🏃Atletismo</h1>
+            <h2><b>La esencia olímpica</b></h2>
+            <p> Carreras, saltos y movimientos que demuestran la capacidad humana al máximo.</p>
+            <h3><b>Disciplinas:</b> Velocidad, Fondo, Saltos y Lanzamientos</h3>
+        </div>
+
+        <div class="categoria-card categoria-tenis">
+            <h1> 🚴Ciclismo</h1>
+            <h2><b>Resistencia sobre ruedas</b></h2>
+            <p> Grandes vueltas y clásicas que ponen a prueba a los mejres ciclistas del mundo</p>
+            <h3><b>Competiciones:</b> Tour de Francia, Giro de Italia y Vuelta a España.</h3>
+        </div>
+    </div>
+</section>
 </body>
 </html>
