Actualizo estilos y estructura de la página

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,6 @@
                 <li><a href="#deportes">Deportes</a></li>
                 <li><a href="#noticias">Noticias</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="#hollow-knight">Hollow Knight</a></li>
             </ul>
         </div>
     </nav>
@@ -34,52 +33,160 @@
     </div>
 </section>
 
-<section id="menu" class="menu-section">
-    <h2>🏅 Deportes destacados 🏅</h2>
-    <h3>Explora tus deportes favoritos en nuestra galería virtual</h3>
-    <div class="menu-grid"></div>
-        <div class="categoria-card categoria-futbol">
-            <h1> ⚽ Fútbol</h1>
-            <h2><b>El rey de los deportes</b></h2>
-            <p>El deporte más popular del mundo con millones de aficionados. Sigue las ligas más importantes y los mejores jugadores.</p>
-            <h3><b>Ligas destacadas:</b> La Liga, Premier League, Serie A, Bundesliga</h3>
+<section class="categoria" id="deportes">
+    <section id="menu" class="menu-section">
+        <h2 class="section-tittle">🏅 Deportes destacados 🏅</h2>
+        <h3 class="section-subtittle">Explora tus deportes favoritos en nuestra galería virtual</h3>
+
+        <div class="menu-grid">
+
+            <div class="categoria-card categoria-futbol">
+                <div class="card-tittle">
+                    <h1>⚽ Fútbol</h1>
+                </div>
+                <h2><b>El rey de los deportes</b></h2>
+                <p>El deporte más popular del mundo con millones de aficionados. Sigue las ligas más importantes y los mejores jugadores.</p>
+                <p><b>Ligas destacadas:</b> La Liga, Premier League, Serie A, Bundesliga</p>
+            </div>
+
+            <div class="categoria-card categoria-baloncesto">
+                <div class="card-tittle">
+                    <h1>🏀 Baloncesto</h1>
+                </div>
+                <h2><b>Emoción en cada canasta</b></h2>
+                <p>Acción trepidante y espectáculo garantizado. Desde la NBA hasta las competencias europeas.</p>
+                <h3><b>Competiciones:</b> NBA, Euroliga, FIBA</h3>
+            </div>
+
+            <div class="categoria-card categoria-tenis">
+                <div class="card-tittle">
+                    <h1>🥎 Tenis</h1>
+                </div>
+                <h2><b>Elegancia y Potencia</b></h2>
+                <p>Los mejores torneos y jugadores más destacados del circuito profesional mundial.</p>
+                <p><b>Grand Slams:</b> Wimbledon, Roland Garros, US Open, Australian Open</p>
+            </div>
+
+            <div class="categoria-card categoria-natacion">
+                <div class="card-tittle">
+                    <h1>🏊 Natación</h1>
+                </div>
+                <h2><b>Velocidad en el agua</b></h2>
+                <p>Compéticiones olímpicas y mundiales con los nadadores más rápidos del mundo.</p>
+                <p><b>Estilos:</b> Libre, Espalda, Pecho, Mariposa</p>
+            </div>
+
+            <div class="categoria-card categoria-atletismo">
+                <div class="card-tittle">
+                    <h1>🏃 Atletismo</h1>
+                </div>
+                <h2><b>La esencia olímpica</b></h2>
+                <p>Carreras, saltos y movimientos que demuestran la capacidad humana al máximo.</p>
+                <p><b>Disciplinas:</b> Velocidad, Fondo, Saltos y Lanzamientos</p>
+            </div>
+
+            <div class="categoria-card categoria-ciclismo">
+                <div class="card-tittle">
+                    <h1>🚴 Ciclismo</h1>
+                </div>
+                <h2><b>Resistencia sobre ruedas</b></h2>
+                <p>Grandes vueltas y clásicas que ponen a prueba a los mejores ciclistas del mundo</p>
+                <p><b>Competiciones:</b> Tour de Francia, Giro de Italia y Vuelta a España.</p>
+            </div>
+
+        </div>
+    </section>
+</section>
+
+<section id="productos" class="estadisticas">
+    <h2 class="section-title">📈📉 Estadísticas 📈📉</h2>
+
+    <div class="tittle-estadisticas">
+
+        <div class="stat">
+            <p>1.2M+</p>
+            <h3>Usuarios activos</h3>
         </div>
 
-        <div class="categoria-card categoria-baloncesto">
-            <h1> 🏀 Baloncesto</h1>
-            <h2><b>Emoción en cada canasta</b></h2>
-            <p> Acción trepidante y espectáculo garantizado. Desde la NBA hasta las competencias europeas.</p>
-            <h3><b>Competiciones:</b> NBA, Euroliga, FIBA</h3>
+        <div class="stat">
+            <p>50+</p>
+            <h3>Deportes Cubiertos</h3>
         </div>
 
-        <div class="categoria-card categoria-tenis">
-            <h1> 🥎Tenis</h1>
-            <h2><b>Elegancia y Potencia</b></h2>
-            <p> Los mejores torneos y jugadores más destacados del circuito profesional mundial.</p>
-            <h3><b>Grand Slams:</b> Wimbledon, Roland Garros, US Open, Australian Open</h3>
+        <div class="stat">
+            <p>10K+</p>
+            <h3>Noticias Diarias</h3>
         </div>
 
-        <div class="categoria-card categoria-tenis">
-            <h1> 🏊Natación</h1>
-            <h2><b>Velocidad en el agua</b></h2>
-            <p> Compéticiones olímpicas y mundiales con los nadadores más rápidos del mundo.</p>
-            <h3><b>Estilos:</b> Libre, Espalda, Pecho, Mariposa</h3>
+        <div class="stat">
+            <p>24/7</p>
+            <h3>Cobertura en vivo</h3>
         </div>
 
-        <div class="categoria-card categoria-tenis">
-            <h1> 🏃Atletismo</h1>
-            <h2><b>La esencia olímpica</b></h2>
-            <p> Carreras, saltos y movimientos que demuestran la capacidad humana al máximo.</p>
-            <h3><b>Disciplinas:</b> Velocidad, Fondo, Saltos y Lanzamientos</h3>
-        </div>
-
-        <div class="categoria-card categoria-tenis">
-            <h1> 🚴Ciclismo</h1>
-            <h2><b>Resistencia sobre ruedas</b></h2>
-            <p> Grandes vueltas y clásicas que ponen a prueba a los mejres ciclistas del mundo</p>
-            <h3><b>Competiciones:</b> Tour de Francia, Giro de Italia y Vuelta a España.</h3>
-        </div>
     </div>
 </section>
+
+<section class="noticias" id="noticias">
+    <h2 class="noticias-title">Últimas Noticias</h2>
+
+    <div class="noticias-list">
+
+        <article class="news-card">
+            <h3>Gran final de la Champions League promete ser épica</h3>
+            <span class="news-date">📅 4 de febrero, 2026</span>
+            <p>
+                Los dos mejores equipos de Europa se preparan para disputar el título
+                más prestigioso del fútbol de clubes en un encuentro que promete
+                emociones fuertes.
+            </p>
+        </article>
+
+        <article class="news-card">
+            <h3>Récord mundial en natación en los últimos campeonatos</h3>
+            <span class="news-date">📅 3 de febrero, 2026</span>
+            <p>
+                Un nuevo récord mundial ha sido establecido en la prueba de
+                100 metros libres, demostrando que los límites humanos continúan
+                siendo superados.
+            </p>
+        </article>
+
+        <article class="news-card">
+            <h3>El Tour de Francia anuncia su recorrido más desafiante</h3>
+            <span class="news-date">📅 2 de febrero, 2026</span>
+            <p>
+                La organización ha presentado un recorrido que incluye los
+                puertos de montaña más exigentes y etapas que pondrán a prueba
+                a los mejores ciclistas.
+            </p>
+        </article>
+
+    </div>
+</section>
+
+<footer class="footer" id="contacto">
+    <div class="footer-content">
+
+        <h2 class="footer-title">Mundo Deportivo</h2>
+        <p class="footer-tagline">
+            Tu fuente confiable de información deportiva
+        </p>
+
+        <nav class="footer-socials">
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a>
+            <a href="#">YouTube</a>
+        </nav>
+
+        <div class="footer-divider"></div>
+
+        <p class="footer-copy">
+            © 2026 Mundo Deportivo. Todos los derechos reservados.
+        </p>
+
+    </div>
+</footer>
+
 </body>
 </html>
