Renombro index.html para GitHub

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<!-- Sección Hero -->
 <header>
     <nav class="navbar">
         <div class="container">
@@ -33,6 +34,7 @@
     </div>
 </section>
 
+<!-- Sección Deportes -->
 <section class="categoria" id="deportes">
     <section id="menu" class="menu-section">
         <h2 class="section-tittle">🏅 Deportes destacados 🏅</h2>
@@ -98,6 +100,7 @@
     </section>
 </section>
 
+<!-- Sección Estadísticas -->
 <section id="productos" class="estadisticas">
     <h2 class="section-title">📈📉 Estadísticas 📈📉</h2>
 
@@ -126,6 +129,7 @@
     </div>
 </section>
 
+<!-- Sección Noticias -->
 <section class="noticias" id="noticias">
     <h2 class="noticias-title">Últimas Noticias</h2>
 
@@ -164,6 +168,7 @@
     </div>
 </section>
 
+<!-- Sección Contacto -->
 <footer class="footer" id="contacto">
     <div class="footer-content">
 
